# life.py

./: README.md  pyproject.toml
.github/workflows/: tests.yml
dev/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
dev/docs/: build-package.md  run-tests.md
dev/docs/test_code/: hist-g4.py  hist1.py  hist2.py
dev/sample/fasta/: mouse.fasta
dev/sample_code/: README.md  hist-g3.py  hist-g4.py
dev/test/aminoacid/: test_amino.py
dev/test/codon/: test_codon.py
dev/test/gene/: test_gene.py
dev/test/nucleotides/: test_nuc.py
dev/test_code/: hist-g3.py  hist3.py
src/life/: __init__.py  aminoacid.py  codon.py  exceptions.py  gene.py  nucleotide.py
src/life/extras/: amino_from_code.py  amino_from_codons.py
src/life/files/: __init__.py  base.py  bin.py  bing.py  enums.py  fasta.py
src/life/files/fasta/: README.md  __init__.py  file.py
src/life/sequence/: gene.py
src/life/sequence/charts/: histogram.py
src/life/sequence/data/: dataframe.py  numpy.py
